--- a/index.html
+++ b/index.html
@@ -2,61 +2,39 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>City Engine Stable</title>
+<title>City Game Full</title>
 <style>
 body { margin:0; overflow:hidden; font-family:sans-serif; }
-
 #startScreen{
-position:absolute;
-width:100%;
-height:100%;
-background:#000000cc;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-color:white;
-z-index:10;
+  position:absolute;width:100%;height:100%;
+  background:#000000cc;display:flex;
+  flex-direction:column;justify-content:center;
+  align-items:center;color:white;z-index:10;
 }
-
 #joystick{
-position:absolute;
-bottom:40px;
-left:40px;
-width:140px;
-height:140px;
-background:rgba(0,0,0,0.3);
-touch-action:none;
-display:flex;
-justify-content:center;
-align-items:center;
+  position:absolute;bottom:40px;left:40px;
+  width:140px;height:140px;
+  background:rgba(0,0,0,0.3);
+  touch-action:none;
 }
-
 #stick{
-width:50px;
-height:50px;
-background:white;
+  position:absolute;left:50px;top:50px;
+  width:40px;height:40px;
+  background:white;
 }
 #jumpBtn{
-position:absolute;
-right:40px;
-bottom:50px;
-width:70px;
-height:70px;
-background:red;
-color:white;
-font-size:18px;
-border:none;
-border-radius:10px;
+  position:absolute;right:20px;bottom:40px;
+  width:70px;height:70px;
+  background:red;color:white;font-size:18px;border:none;border-radius:10px;
 }
 </style>
 </head>
 <body>
 
 <div id="startScreen">
-<h1>City Game</h1>
-<input id="nameInput" placeholder="Masukkan Nama..." style="padding:10px;font-size:18px;">
-<button onclick="startGame()" style="margin-top:10px;padding:10px;">Mulai</button>
+  <h1>City Game</h1>
+  <input id="nameInput" placeholder="Masukkan Nama..." style="padding:10px;font-size:18px;">
+  <button onclick="startGame()" style="margin-top:10px;padding:10px;">Mulai</button>
 </div>
 
 <div id="joystick"><div id="stick"></div></div>
@@ -64,239 +42,150 @@ border-radius:10px;
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.158/build/three.min.js"></script>
 <script>
-
-/* ===== SCENE ===== */
+// ===== SCENE =====
 const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87ceeb);
-
-const camera = new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,3000);
+scene.background = new THREE.Color(0xd0d0d0); // abu-abu terang
+const camera = new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,2000);
 const renderer = new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
+scene.add(new THREE.HemisphereLight(0xffffff,0x444444,1.2));
+const light=new THREE.DirectionalLight(0xffffff,1);
+light.position.set(50,100,50); scene.add(light);
 
-/* ===== LIGHT ===== */
-const hemiLight = new THREE.HemisphereLight(0xffffff,0x444444,1.2);
-scene.add(hemiLight);
-const dirLight = new THREE.DirectionalLight(0xffffff,1);
-dirLight.position.set(50,100,50);
-scene.add(dirLight);
-
-/* ===== GROUND ===== */
+// ===== GROUND =====
 const ground = new THREE.Mesh(
-new THREE.PlaneGeometry(1000,1000),
-new THREE.MeshStandardMaterial({color:0x2e8b57})
+  new THREE.PlaneGeometry(1000,1000),
+  new THREE.MeshStandardMaterial({color:0x2e8b57})
 );
 ground.rotation.x=-Math.PI/2;
 scene.add(ground);
 
-/* ===== PLAYER ===== */
-const player=new THREE.Group();
-scene.add(player);
-player.position.set(0,1,0); // spawn aman
-
-// Tubuh
-const body=new THREE.Mesh(
-new THREE.BoxGeometry(0.7,1.6,0.4),
-new THREE.MeshStandardMaterial({color:0x0099ff})
-);
-body.position.y=1.6;
-player.add(body);
-
-// Kepala
-const head=new THREE.Mesh(
-new THREE.BoxGeometry(0.6,0.6,0.6),
-new THREE.MeshStandardMaterial({color:0xffcc99})
-);
-head.position.y=2.6;
-player.add(head);
-
-// Tangan dan kaki
-function limb(x,y){ 
-  const l=new THREE.Mesh(new THREE.BoxGeometry(0.25,1,0.25),new THREE.MeshStandardMaterial({color:0x222222}));
-  l.position.set(x,y,0);
-  player.add(l);
-  return l;
+// ===== PLAYER =====
+const player = new THREE.Group(); scene.add(player);
+player.position.set(0,1,0);
+const body = new THREE.Mesh(new THREE.BoxGeometry(0.7,1.6,0.4),
+  new THREE.MeshStandardMaterial({color:0x0099ff}));
+body.position.y=1.6; player.add(body);
+const head = new THREE.Mesh(new THREE.BoxGeometry(0.6,0.6,0.6),
+  new THREE.MeshStandardMaterial({color:0xffcc99}));
+head.position.y=2.6; player.add(head);
+function limb(x,y){
+  const l=new THREE.Mesh(new THREE.BoxGeometry(0.25,1,0.25),
+    new THREE.MeshStandardMaterial({color:0x222222}));
+  l.position.set(x,y,0); player.add(l); return l;
 }
-const armL=limb(-0.6,1.8);
-const armR=limb(0.6,1.8);
-const legL=limb(-0.25,0.5);
-const legR=limb(0.25,0.5);
+const armL=limb(-0.6,1.8), armR=limb(0.6,1.8);
+const legL=limb(-0.25,0.5), legR=limb(0.25,0.5);
 
-/* ===== NAME LABEL ===== */
+// ===== NAME =====
 let nameLabel=null;
 function createNameLabel(text){
   const canvas=document.createElement("canvas");
-  const ctx=canvas.getContext("2d");
   canvas.width=256; canvas.height=64;
+  const ctx=canvas.getContext("2d");
   ctx.fillStyle="white"; ctx.font="28px Arial"; ctx.textAlign="center";
   ctx.fillText(text,128,40);
   const texture=new THREE.CanvasTexture(canvas);
   const material=new THREE.SpriteMaterial({map:texture});
   const sprite=new THREE.Sprite(material);
-  sprite.scale.set(3,0.8,1);
-  sprite.position.y=3.5;
-  player.add(sprite);
-  return sprite;
+  sprite.scale.set(3,0.8,1); sprite.position.y=3.5;
+  player.add(sprite); return sprite;
 }
-
 function startGame(){
   const name=document.getElementById("nameInput").value.trim();
-  if(!name){ alert("Nama harus diisi!"); return; }
+  if(name===""){ alert("Nama harus diisi!"); return; }
   nameLabel=createNameLabel(name);
   document.getElementById("startScreen").style.display="none";
 }
 
-/* ===== WORLD BUILDINGS ===== */
-const obstacles=[];
-const buildingColors=[0xff4d4d,0x4da6ff,0x4dff88,0xffff66,0xff66ff,0xff944d];
-
-// Bangunan rapi, ada jalan 5cm
-for(let x=-120;x<=120;x+=17){
-  for(let z=-120;z<=120;z+=17){
-    const h=10+Math.random()*15;
+// ===== WORLD =====
+const obstacles=[]; 
+const colors=[0xff4d4d,0x4da6ff,0x4dff88,0xffff66,0xff66ff,0xff944d];
+for(let x=-120;x<=120;x+=15){
+  for(let z=-120;z<=120;z+=15){
+    if(Math.abs(x)<20 && Math.abs(z)<20) continue; // spawn kosong
+    const h=10+Math.random()*20;
     const building=new THREE.Mesh(
-      new THREE.BoxGeometry(14,h,14),
-      new THREE.MeshStandardMaterial({color:buildingColors[Math.floor(Math.random()*buildingColors.length)]})
+      new THREE.BoxGeometry(12,h,12),
+      new THREE.MeshStandardMaterial({color:colors[Math.floor(Math.random()*colors.length)]})
     );
-    building.position.set(x,h/2,z);
-    scene.add(building);
+    building.position.set(x,h/2,z); scene.add(building);
     obstacles.push(new THREE.Box3().setFromObject(building));
   }
 }
 
-/* ===== INTERIOR RUMAH ===== */
-const interiors=[];
-function createHouse(x,z){
-  const house=new THREE.Group();
-  const walls=new THREE.Mesh(new THREE.BoxGeometry(20,12,20),new THREE.MeshStandardMaterial({color:0xffffff,side:THREE.BackSide}));
-  walls.position.y=6;
-  house.add(walls);
-  house.position.set(x,0,z);
-  scene.add(house);
-  interiors.push(house);
-}
-createHouse(30,30);
-createHouse(-30,30);
-
-/* ===== INPUT ===== */
-let move={f:0,r:0};
-let sprint=false;
-
-document.addEventListener("keydown",e=>{
-if(e.key==="w") move.f=1;
-if(e.key==="s") move.f=-1;
-if(e.key==="a") move.r=-1;
-if(e.key==="d") move.r=1;
-if(e.key==="Shift") sprint=true;
-if(e.key===" ") jump();
-});
-document.addEventListener("keyup",e=>{
-if(["w","s"].includes(e.key)) move.f=0;
-if(["a","d"].includes(e.key)) move.r=0;
-if(e.key==="Shift") sprint=false;
-});
-
-/* ===== CAMERA CONTROL ===== */
-let yaw=0, pitch=0;
-renderer.domElement.addEventListener("click",()=>renderer.domElement.requestPointerLock());
-document.addEventListener("mousemove",e=>{
-if(document.pointerLockElement===renderer.domElement){
-  yaw-=e.movementX*0.002;
-  pitch-=e.movementY*0.002;
-  pitch=Math.max(-1,Math.min(1,pitch));
-}
-});
-
-/* ===== PHYSICS ===== */
-let velocityY=0, onGround=true;
-function jump(){ if(onGround){ velocityY=0.3; onGround=false; } }
-
-/* ===== COLLISION ===== */
-function isColliding(pos){
-  const box=new THREE.Box3(new THREE.Vector3(pos.x-0.5,pos.y,pos.z-0.5),new THREE.Vector3(pos.x+0.5,pos.y+3,pos.z+0.5));
-  return obstacles.some(o=>box.intersectsBox(o));
-}
-
-/* ===== JOYSTICK ===== */
+// ===== INPUT =====
+let moveX=0, moveZ=0, velocityY=0, onGround=true;
 const joy=document.getElementById("joystick");
 const stick=document.getElementById("stick");
-let moveX=0, moveZ=0;
-
 joy.addEventListener("touchmove",e=>{
   const rect=joy.getBoundingClientRect();
   let x=e.touches[0].clientX-rect.left-70;
   let y=e.touches[0].clientY-rect.top-70;
-  const max=45;
-  x=Math.max(-max,Math.min(max,x));
-  y=Math.max(-max,Math.min(max,y));
-  moveX=x/max;
-  moveZ=y/max;
-  stick.style.left=(x+70)+"px";
-  stick.style.top=(y+70)+"px";
+  const max=50;
+  x=Math.max(-max,Math.min(max,x)); y=Math.max(-max,Math.min(max,y));
+  moveX=x/max; moveZ=y/max;
+  stick.style.left=(x+50)+"px"; stick.style.top=(y+50)+"px";
 });
-joy.addEventListener("touchend",()=>{ moveX=0; moveZ=0; stick.style.left="70px"; stick.style.top="70px"; });
+joy.addEventListener("touchend",()=>{moveX=0; moveZ=0; stick.style.left="50px"; stick.style.top="50px";});
+document.getElementById("jumpBtn").addEventListener("click",()=>{if(onGround){velocityY=0.3; onGround=false;}});
 
-document.getElementById("jumpBtn").onclick=jump;
+// ===== CAMERA =====
+let yaw=0,pitch=0;
+renderer.domElement.addEventListener("click",()=>{renderer.domElement.requestPointerLock();});
+document.addEventListener("mousemove",e=>{
+  if(document.pointerLockElement===renderer.domElement){
+    yaw-=e.movementX*0.002;
+    pitch-=e.movementY*0.002;
+    pitch=Math.max(-1,Math.min(1,pitch));
+  }
+});
 
-/* ===== LOOP ===== */
+// ===== COLLISION =====
+function isColliding(pos){
+  const box=new THREE.Box3(
+    new THREE.Vector3(pos.x-0.5,pos.y,pos.z-0.5),
+    new THREE.Vector3(pos.x+0.5,pos.y+3,pos.z+0.5)
+  );
+  return obstacles.some(o=>box.intersectsBox(o));
+}
+
+// ===== ANIMATE =====
 let walk=0;
 function animate(){
   requestAnimationFrame(animate);
-
-  const speed=sprint?0.4:0.2;
-
-  // Gerak player sesuai kamera dan joystick
-  let dir=new THREE.Vector3();
-  dir.x = Math.sin(yaw)*(-move.f) + Math.cos(yaw)*moveX;
-  dir.z = Math.cos(yaw)*(-move.f) - Math.sin(yaw)*moveX;
-
-  if(move.f!==0||move.r!==0||moveX!==0||moveZ!==0){
+  const speed=0.2;
+  // arah joystick
+  let dir=new THREE.Vector3(
+    Math.sin(yaw)*(-moveZ)+Math.cos(yaw)*moveX,
+    0,
+    Math.cos(yaw)*(-moveZ)-Math.sin(yaw)*moveX
+  );
+  if(moveX!==0 || moveZ!==0){
     let newPos=player.position.clone().addScaledVector(dir,speed);
-    if(!isColliding(newPos)){
-      player.position.x=newPos.x;
-      player.position.z=newPos.z;
-    }
+    if(!isColliding(newPos)){player.position.x=newPos.x; player.position.z=newPos.z;}
     walk+=0.25;
-    armL.rotation.x=Math.sin(walk)*0.8;
-    armR.rotation.x=-Math.sin(walk)*0.8;
-    legL.rotation.x=-Math.sin(walk)*0.8;
-    legR.rotation.x=Math.sin(walk)*0.8;
-  } else {
-    armL.rotation.x=armR.rotation.x=legL.rotation.x=legR.rotation.x=0;
-  }
-
-  // Gravity
-  velocityY+=-0.015;
-  player.position.y+=velocityY;
-  if(player.position.y<=1){
-    player.position.y=1;
-    velocityY=0;
-    onGround=true;
-  }
-
+    armL.rotation.x=Math.sin(walk)*0.8; armR.rotation.x=-Math.sin(walk)*0.8;
+    legL.rotation.x=-Math.sin(walk)*0.8; legR.rotation.x=Math.sin(walk)*0.8;
+  }else{armL.rotation.x=armR.rotation.x=legL.rotation.x=legR.rotation.x=0;}
+  // gravity
+  velocityY-=0.015; player.position.y+=velocityY;
+  if(player.position.y<=0){player.position.y=0; velocityY=0; onGround=true;}
   player.rotation.y=yaw;
-
-  // Kamera bebas
-  const camDist=10;
+  // kamera bebas
+  const camDist=8;
   camera.position.set(
     player.position.x - Math.sin(yaw)*camDist,
-    player.position.y + 3 + pitch*4,
+    player.position.y + 4 + pitch*3,
     player.position.z - Math.cos(yaw)*camDist
   );
   camera.lookAt(player.position.x,player.position.y+2,player.position.z);
-
   if(nameLabel) nameLabel.lookAt(camera.position);
-
   renderer.render(scene,camera);
 }
 animate();
-
-window.addEventListener("resize",()=>{
-  camera.aspect=innerWidth/innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(innerWidth,innerHeight);
-});
-
+window.addEventListener("resize",()=>{camera.aspect=innerWidth/innerHeight; camera.updateProjectionMatrix(); renderer.setSize(innerWidth,innerHeight);});
 </script>
 </body>
 </html>
